change index file

--- a/index.html
+++ b/index.html
@@ -13,11 +13,29 @@
 <body>
 
     <header> <!-- ========= HEADER ============= -->
-            <div class="header__content container">
-            <a href="#">
-                <img src="img/logo.svg" alt="logo">
-            </a>
-            <img src="img/search.svg" alt="saerch">
+        <div class="container">
+            <div class="head">
+                <div class="head__logo">
+                    <a href="index.html">
+                        <img src="img/logo.svg" alt="logo">
+                    </a>
+                    <form action="#">
+                        <input id="search-btn" type="image" src="img/search.svg" alt="search">
+                    </form>
+                </div>
+                <nav class="head__navigation">
+                    <button class="menu_btn">
+                        <span class="menu_btn-item"></span>
+                    </button>
+                    <a class="account__btn" href="#">
+                        <img src="img/account.svg" alt="account">
+                    </a>
+                    <a class="cart" href="cart.html">
+                        <img src="img/cart.svg" alt="cart">
+                        <div class="cart-txt">5</div>
+                    </a>
+                </nav>
+            </div>
         </div>
     </header>
 
