--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
     </header>
 
     <main> <!-- ========= MAIN ============= -->
-        <div class="brand"> <!-- ----BRAND---- -->
-
-        </div>
+        <section class="brand"> <!-- ----BRAND---- -->
+            <div class="brand__title">
+                <h1 class="the-brand">The brand</h1>
+                <h1 class="lux">of&nbsp;luxerious <span class="fashion">fashion</span></h1>
+            </div>
+        </section>
 
         <div class="container">
             <div class="categories"> <!-- ---CATEGORIES--- -->
@@ -54,9 +57,53 @@
             </div>
         </div>
 
-        <div class="benefits"> <!-- ---BENEFITS--- -->
+        <section class="benefits"> <!-- ---BENEFITS--- -->
+            <div class="container">
+                <div class="box">
+                    <div class="box__delivery">
+                        <h3 class="box-h3">Free Delivery</h3>
+                        <p class="box-text">Worldwide delivery on&nbsp;all. Authorit tively morph next&nbsp;-&nbsp;generation&nbsp;
+                            innov tion with extensive models.</p>
+                    </div>
+                    <div class="box__sales">
+                        <h3 class="box-h3">Sales & discounts</h3>
+                        <p class="box-text">Worldwide delivery on&nbsp;all. Authorit tively morph next&nbsp;-&nbsp;generation&nbsp;
+                            innov
+                            tion with extensive models.</p>
+                    </div>
+                    <div class="box__quality">
+                        <h3 class="box-h3">Quality assurance</h3>
+                        <p class="box-text">Worldwide delivery on&nbsp;all. Authorit tively morph next&nbsp;-&nbsp;generation&nbsp;
+                            innov
+                            tion with extensive models.</p>
+                    </div>
+                </div>
+            </div>
+         </section>
 
-         </div>
+         <section class="mail"> <!-- ---MAIL--- -->
+                <div class="container">
+                    <div class="info">
+                        <div class="info__left">
+                            <p class="info-text">&laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi,
+                                <span class="italic">a&nbsp;pulvinar purus condimentum&raquo;</span>
+                            </p>
+                        </div>
+                        <div class="form-subscribe">
+                            <div class="subscribe-mail">
+                                <span class="tittle">Subscribe</span>
+                                <span class="subtittle">for our newletter and promotion</span>
+                            </div>
+                            <form class="form" action="#">
+                                <div class="form-mail">
+                                    <input class="mail" type="email" placeholder="Enter Your Email">
+                                </div>
+                                <button class="button-sub" type="submit">Subscribe</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+         </section>
     </main>
 
     <footer> <!-- ========= FOOTER ============= -->
