change file index v1.3

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap"
         rel="stylesheet">
     <title>Главная</title>
+    <script src="https://kit.fontawesome.com/a4b4dff806.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -48,13 +49,46 @@
         </section>
 
         <div class="container">
-            <div class="categories"> <!-- ---CATEGORIES--- -->
+            <section class="categories"> <!-- ---CATEGORIES--- -->
+                <ul>
+                    <li class="categories__content">
+                        <img src="img/women-categories.png" alt="">
+                        <h4>
+                            30% 0ff
+                            <span>for&nbsp;women</span>
+                        </h4>
+                    </li>
+                    <li class="categories__content">
+                        <img src="img/men-categories.png" alt="">
+                        <h4>
+                            hot deal
+                            <span>for&nbsp;men</span>
+                        </h4>
+                    </li>
+                    <li class="categories__content">
+                        <img src="img/kids-categories.png" alt="">
+                        <h4>
+                            new arrivals
+                            <span>for&nbsp;kids</span>
+                        </h4>
+                    </li>
+                    <li class="categories__accesories">
+                        <img src="img/accesories-categories.png" alt="">
+                        <h4 class="accesories__h4">
+                            luxerious &amp;&nbsp;trendy
+                            <span>accesories</span>
+                        </h4>
+                    </li>
+                </ul>
+            </section>
 
-            </div>
+            <section class="card"> <!-- ---CARD--- -->
+                <h3>Fetured Items</h3>
+                <p>Shop for items based on&nbsp;what we&nbsp;featured in&nbsp;this week</p>
+                <div class="card__items">
 
-            <div class="card"> <!-- ---CARD--- -->
-
-            </div>
+                </div>
+            </section>
         </div>
 
         <section class="benefits"> <!-- ---BENEFITS--- -->
@@ -96,7 +130,7 @@
                             </div>
                             <form class="form" action="#">
                                 <div class="form-mail">
-                                    <input class="mail" type="email" placeholder="Enter Your Email">
+                                    <input class="mail__chat" type="email" placeholder="Enter Your Email">
                                 </div>
                                 <button class="button-sub" type="submit">Subscribe</button>
                             </form>
@@ -107,7 +141,35 @@
     </main>
 
     <footer> <!-- ========= FOOTER ============= -->
-
+        <div class="container">
+            <div class="footer-content">
+                <p class="rights">&copy;&nbsp;2021 Brand All Rights Reserved.</p>
+                <div class="footer__icons">
+                    <ul class="soc-icon-box">
+                        <li class="soc-icon-items">
+                            <a href="#">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li class="soc-icon-items">
+                            <a href="#">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li class="soc-icon-items">
+                            <a href="#">
+                                <i class="fab fa-pinterest-p"></i>
+                            </a>
+                        </li>
+                        <li class="soc-icon-items">
+                            <a href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
 
 </body>
