change index file v1.4

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <nav class="head__navigation">
                     <button class="menu_btn">
-                        <span class="menu_btn-item"></span>
+                        <a href="#"><img src="img/menu-btn.svg" alt=""></a>
                     </button>
                     <a class="account__btn" href="#">
                         <img src="img/account.svg" alt="account">
@@ -52,28 +52,28 @@
             <section class="categories"> <!-- ---CATEGORIES--- -->
                 <ul>
                     <li class="categories__content">
-                        <img src="img/women-categories.png" alt="">
+                        <img src="img/women-categories.jpg" alt="">
                         <h4>
                             30% 0ff
                             <span>for&nbsp;women</span>
                         </h4>
                     </li>
                     <li class="categories__content">
-                        <img src="img/men-categories.png" alt="">
+                        <img src="img/men-categories.jpg" alt="">
                         <h4>
                             hot deal
                             <span>for&nbsp;men</span>
                         </h4>
                     </li>
                     <li class="categories__content">
-                        <img src="img/kids-categories.png" alt="">
+                        <img src="img/kids-categories.jpg" alt="">
                         <h4>
                             new arrivals
                             <span>for&nbsp;kids</span>
                         </h4>
                     </li>
                     <li class="categories__accesories">
-                        <img src="img/accesories-categories.png" alt="">
+                        <img src="img/acc-categories.jpg" alt="">
                         <h4 class="accesories__h4">
                             luxerious &amp;&nbsp;trendy
                             <span>accesories</span>
@@ -85,9 +85,43 @@
             <section class="card"> <!-- ---CARD--- -->
                 <h3>Fetured Items</h3>
                 <p>Shop for items based on&nbsp;what we&nbsp;featured in&nbsp;this week</p>
-                <div class="card__items">
-
-                </div>
+                <!-- <div class="card__items">
+                    <ul>
+                        <li>
+                            <article class="card__item">
+                                <img src="img/card1.png" alt="">
+                            </article>
+                        </li>
+                        <li>
+                            <article class="card__item">
+                                <img src="img/card2.png" alt="">
+                            </article>
+                        </li>
+                        <li>
+                            <article class="card__item">
+                                <img src="img/card3.png" alt="">
+                            </article>
+                        </li>
+                        <li>
+                            <article class="card__item">
+                                <img src="img/card4.png" alt="">
+                            </article>
+                        </li>
+                        <li>
+                            <article class="card__item">
+                                <img src="img/card5.png" alt="">
+                            </article>
+                        </li>
+                        <li>
+                            <article class="card__item">
+                                <img src="img/card6.png" alt="">
+                            </article>
+                        </li>
+                    </ul>
+                </div> -->
+                <form action="#">
+                    <input class="categories__btn" type="button" value="Browse All Product">
+                </form>
             </section>
         </div>
 
