change index file v1.5

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
     <main> <!-- ========= MAIN ============= -->
         <section class="brand"> <!-- ----BRAND---- -->
             <div class="brand__title">
-                <h1 class="the-brand">The brand</h1>
-                <h1 class="lux">of&nbsp;luxerious <span class="fashion">fashion</span></h1>
+                <div class="brand_wrap">
+                    <h1 class="the-brand">The brand</h1>
+                    <h1 class="lux">of&nbsp;luxerious <span class="fashion">fashion</span></h1>
+                </div>
             </div>
         </section>
 
