change index file v1.6

--- a/index.html
+++ b/index.html
@@ -86,41 +86,77 @@
 
             <section class="card"> <!-- ---CARD--- -->
                 <h3>Fetured Items</h3>
-                <p>Shop for items based on&nbsp;what we&nbsp;featured in&nbsp;this week</p>
-                <!-- <div class="card__items">
+                <p class="card__p">Shop for items based on&nbsp;what we&nbsp;featured in&nbsp;this week</p>
+                <div class="card__items">
                     <ul>
-                        <li>
-                            <article class="card__item">
-                                <img src="img/card1.png" alt="">
+                        <li class="card__item">
+                            <article>
+                                <img src="img/card1.png" alt="1">
+                                <div class="name">
+                                    <h4 class="name__h4">Ellery x M'O capsule</h4>
+                                    <p>Known for her sculptural takes on&nbsp;traditional tailoring, Australian arbiter of&nbsp;cool Kym Ellery teams
+                                    up&nbsp;with Moda Operandi.</p>
+                                    <span class="name__span">$52.00</span>
+                                </div>
                             </article>
                         </li>
-                        <li>
-                            <article class="card__item">
-                                <img src="img/card2.png" alt="">
+                        <li class="card__item">
+                            <article>
+                                <img src="img/card2.png" alt="2">
+                                <div class="name">
+                                    <h4 class="name__h4">Ellery x M'O capsule</h4>
+                                    <p>Known for her sculptural takes on&nbsp;traditional tailoring, Australian arbiter of&nbsp;cool Kym Ellery teams
+                                        up&nbsp;with Moda Operandi.</p>
+                                    <span class="name__span">$52.00</span>
+                                </div>
                             </article>
                         </li>
-                        <li>
-                            <article class="card__item">
-                                <img src="img/card3.png" alt="">
+                        <li class="card__item">
+                            <article>
+                                <img src="img/card3.png" alt="3">
+                                <div class="name">
+                                    <h4 class="name__h4">Ellery x M'O capsule</h4>
+                                    <p>Known for her sculptural takes on&nbsp;traditional tailoring, Australian arbiter of&nbsp;cool Kym Ellery teams
+                                        up&nbsp;with Moda Operandi.</p>
+                                    <span class="name__span">$52.00</span>
+                                </div>
                             </article>
                         </li>
-                        <li>
-                            <article class="card__item">
-                                <img src="img/card4.png" alt="">
+                        <li class="card__item">
+                            <article>
+                                <img src="img/card4.png" alt="4">
+                                <div class="name">
+                                    <h4 class="name__h4">Ellery x M'O capsule</h4>
+                                    <p>Known for her sculptural takes on&nbsp;traditional tailoring, Australian arbiter of&nbsp;cool Kym Ellery teams
+                                        up&nbsp;with Moda Operandi.</p>
+                                    <span class="name__span">$52.00</span>
+                                </div>
                             </article>
                         </li>
-                        <li>
-                            <article class="card__item">
-                                <img src="img/card5.png" alt="">
+                        <li class="card__item">
+                            <article>
+                                <img src="img/card5.png" alt="5">
+                                <div class="name">
+                                    <h4 class="name__h4">Ellery x M'O capsule</h4>
+                                    <p>Known for her sculptural takes on&nbsp;traditional tailoring, Australian arbiter of&nbsp;cool Kym Ellery teams
+                                        up&nbsp;with Moda Operandi.</p>
+                                    <span class="name__span">$52.00</span>
+                                </div>
                             </article>
                         </li>
-                        <li>
-                            <article class="card__item">
-                                <img src="img/card6.png" alt="">
+                        <li class="card__item">
+                            <article>
+                                <img src="img/card6.png" alt="6">
+                                <div class="name">
+                                    <h4 class="name__h4">Ellery x M'O capsule</h4>
+                                    <p>Known for her sculptural takes on&nbsp;traditional tailoring, Australian arbiter of&nbsp;cool Kym Ellery teams
+                                        up&nbsp;with Moda Operandi.</p>
+                                    <span class="name__span">$52.00</span>
+                                </div>
                             </article>
                         </li>
                     </ul>
-                </div> -->
+                </div>
                 <form action="#">
                     <input class="categories__btn" type="button" value="Browse All Product">
                 </form>
