--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap"
         rel="stylesheet">
-    <title>Главная</title>
+    <title>Main</title>
     <script src="https://kit.fontawesome.com/a4b4dff806.js" crossorigin="anonymous"></script>
 </head>
 
