--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     </form>
                 </div>
                 <nav class="head__navigation">
-                    <button class="menu_btn">
-                        <a href="#"><img src="img/menu-btn.svg" alt=""></a>
-                    </button>
+                    
+                        <a class="menu_btn" href="#"><img src="img/menu-btn.svg" alt=""></a>
+                    
                     <a class="account__btn" href="#">
                         <img src="img/account.svg" alt="account">
                     </a>
@@ -41,17 +41,17 @@
     </header>
 
     <main> <!-- ========= MAIN ============= -->
-        <section class="brand"> <!-- ----BRAND---- -->
+        <div class="brand"> <!-- ********BRAND******** -->
             <div class="brand__title">
                 <div class="brand_wrap">
                     <h1 class="the-brand">The brand</h1>
                     <h1 class="lux">of&nbsp;luxerious <span class="fashion">fashion</span></h1>
                 </div>
             </div>
-        </section>
+        </div>
 
         <div class="container">
-            <section class="categories"> <!-- ---CATEGORIES--- -->
+            <div class="categories"> <!-- ********CATEGORIES******** -->
                 <ul>
                     <li class="categories__content">
                         <img src="img/women-categories.jpg" alt="">
@@ -82,9 +82,9 @@
                         </h4>
                     </li>
                 </ul>
-            </section>
+            </div>
 
-            <section class="card"> <!-- ---CARD--- -->
+            <div class="card"> <!-- ********CARD******** -->
                 <h3>Fetured Items</h3>
                 <p class="card__p">Shop for items based on&nbsp;what we&nbsp;featured in&nbsp;this week</p>
                 <div class="card__items">
@@ -160,10 +160,10 @@
                 <form action="#">
                     <input class="categories__btn" type="button" value="Browse All Product">
                 </form>
-            </section>
+            </div>
         </div>
 
-        <section class="benefits"> <!-- ---BENEFITS--- -->
+        <div class="benefits"> <!-- ********BENEFITS******** -->
             <div class="container">
                 <div class="box">
                     <div class="box__delivery">
@@ -185,9 +185,9 @@
                     </div>
                 </div>
             </div>
-         </section>
+         </div>
 
-         <section class="mail"> <!-- ---MAIL--- -->
+         <div class="mail"> <!-- ********MAIL********* -->
                 <div class="container">
                     <div class="info">
                         <div class="info__left">
@@ -209,7 +209,7 @@
                         </div>
                     </div>
                 </div>
-         </section>
+         </div>
     </main>
 
     <footer> <!-- ========= FOOTER ============= -->
