--- a/catalog.html
+++ b/catalog.html
@@ -55,6 +55,7 @@
         <div class="filter__left">
             <span>Filter</span>
             <img src="img/filter.svg" alt="filter">
+            <!-- <div class="sidebar"></div> -->
         </div>
         <div class="filter__right">
             <div class="filter-trending">
