create product file

--- a/catalog.html
+++ b/catalog.html
@@ -75,7 +75,7 @@
 
     <main class="container"> <!-- ========= MAIN ============= -->
         <div class="catalog-card"> <!-- ********CARD******** -->
-            <div class="card__items">
+            <div class="catalog-card__items">
                 <ul>
                     <li class="card__item">
                         <article>
