change catalog file

--- a/index.html
+++ b/index.html
@@ -200,9 +200,8 @@
             </div>
         </div>
 
-        <div class="benefits"> <!-- ********BENEFITS******** -->
-            <div class="container">
-                <div class="box">
+        <div class="benefits"> <!-- ********BENEFITS******** -->      
+                <div class="box container">
                     <div class="box__delivery">
                         <h3 class="box-h3">Free Delivery</h3>
                         <p class="box-text">Worldwide delivery on&nbsp;all. Authorit tively morph next&nbsp;-&nbsp;generation&nbsp;
@@ -221,7 +220,6 @@
                             tion with extensive models.</p>
                     </div>
                 </div>
-            </div>
          </div>
 
          <div class="mail"> <!-- ********MAIL********* -->
