--- a/catalog.html
+++ b/catalog.html
@@ -57,7 +57,6 @@
             <img src="img/filter.svg" alt="filter">
             <!-- <div class="sidebar"></div> -->
         </div>
-
         <div class="filter__right">
             <div class="filter-trending">
                 <span>Trending now</span> 
@@ -66,29 +65,6 @@
             <div class="filter-size">
                 Size
                 <img src="img/sort.png" alt="">
-                <div class="size-hover">
-                    <form class="size-hover-form" action="#">
-                        <div class="size">
-                            <input type="checkbox" id="xs" name="xs">
-                            <label for="xs">XS</label>
-                        </div>
-
-                        <div class="size">
-                            <input type="checkbox" id="s" name="s">
-                            <label for="s">S</label>
-                        </div>
-                        
-                        <div class="size">
-                            <input type="checkbox" id="m" name="m">
-                            <label for="m">M</label>
-                        </div>
-
-                        <div class="size">
-                            <input type="checkbox" id="l" name="l">
-                            <label for="l">L</label>
-                        </div>
-                    </form>
-                </div>
             </div>
             <div class="filter-price">
                 Price
@@ -227,28 +203,32 @@
     </div>
     </main>
 
-        <div class="benefits">
-            <!-- ********BENEFITS******** -->
-            <div class="box container">
-                <div class="box__delivery">
-                    <h3 class="box-h3">Free Delivery</h3>
-                    <p class="box-text">Worldwide delivery on&nbsp;all. Authorit tively morph next&nbsp;-&nbsp;generation&nbsp;
-                        innov tion with extensive models.</p>
-                </div>
-                <div class="box__sales">
-                    <h3 class="box-h3">Sales & discounts</h3>
-                    <p class="box-text">Worldwide delivery on&nbsp;all. Authorit tively morph next&nbsp;-&nbsp;generation&nbsp;
-                        innov
-                        tion with extensive models.</p>
-                </div>
-                <div class="box__quality">
-                    <h3 class="box-h3">Quality assurance</h3>
-                    <p class="box-text">Worldwide delivery on&nbsp;all. Authorit tively morph next&nbsp;-&nbsp;generation&nbsp;
-                        innov
-                        tion with extensive models.</p>
+        <section class="benefits">  <!-- ********BENEFITS********  -->
+            <div class="container">
+                <div class="box">
+                    <div class="box__delivery">
+                        <h3 class="box-h3">Free Delivery</h3>
+                        <p class="box-text">Worldwide delivery on&nbsp;all. Authorit tively morph
+                            next&nbsp;-&nbsp;generation&nbsp;
+                            innov tion with extensive models.</p>
+                    </div>
+                    <div class="box__sales">
+                        <h3 class="box-h3">Sales & discounts</h3>
+                        <p class="box-text">Worldwide delivery on&nbsp;all. Authorit tively morph
+                            next&nbsp;-&nbsp;generation&nbsp;
+                            innov
+                            tion with extensive models.</p>
+                    </div>
+                    <div class="box__quality">
+                        <h3 class="box-h3">Quality assurance</h3>
+                        <p class="box-text">Worldwide delivery on&nbsp;all. Authorit tively morph
+                            next&nbsp;-&nbsp;generation&nbsp;
+                            innov
+                            tion with extensive models.</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
         
         <div class="mail"> <!-- ********MAIL******** -->
             <div class="container">
